# taletskicom

./: .env.example  .file-dir-naming-convention.yaml  .gitignore  .pre-commit-config.yaml  CNAME  Cargo.toml  LICENSE  README.md  build.rs  index.html  robots.txt  rustfmt.toml  todo
.cargo/: config.toml
.github/workflows/: deploy-static-gh-pages.yml  deploy-static.yml
crates/static_website/: Cargo.toml  build.rs
crates/templates/: Cargo.toml  askama.toml
crates/templates/src/: homepage.html  lib.rs
crates/templates/src/base/: base.css  base.html
crates/templates/src/partials/: header.html
crates/templates/src/partials/theme_toggle/: theme_dark_icon.html  theme_light_icon.html  theme_system_icon.html  toggle.html
scripts/: bootstrap-dev.sh
src/: config.rs  lib.rs  main.rs  response.rs  route.rs  serve.rs  server.rs  templates.rs
src/handlers/: healthcheck.rs  homepage.rs  mod.rs
src/middleware/: trace.rs
src/templates/: homepage.html
src/templates/base/: base.css  base.html
src/templates/partials/: header.html  main_logo.html
static/: sitemap.xml
templates/: base.html  homepage.html
templates/partials/: header.html  main_logo.html
tests/e2e/: Cargo.toml
tests/e2e/src/: browser.rs  config_mock.rs  lib.rs  webdriver_server.rs
tests/e2e/tests/: healthcheck.rs  homepage.rs
