[package]
name = "taletskicom"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tower = "0.5.2"
tower-http = "0.6.6"
axum = { version = "0.8.6", features = ["macros"] }
askama = "0.14.0"
anyhow = "1.0.100"
dotenvy = "0.15.7"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
serde_json = "1.0.145" 
