[package]
name = "taletskicom"
description = "Home for taletski.com's code"
version = "1.0.0"
edition = "2024"
publish = false

[lib]
name = "taletskicom"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace", "fs"] }
axum = { version = "0.8.6", features = ["macros"] }
askama = { version = "0.14.0", features = [] }
anyhow = "1.0.100"
dotenvy = "0.15.7"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
serde_json = "1.0.145"
tower-livereload = "0.10.1"
strum = { version = "0.27.2", features = ["derive"] }

[workspace]
members = [".", "tests/e2e"]
default-members = ["."]
resolver = "2"
