[package]
name = "e2e"
version = "1.0.0"
publish = false
edition = "2024"

[dependencies]
taletskicom = { path = "../.." } 
anyhow = "1.0.100"
portpicker = "0.1.1"
serde_json = "1.0.145" 
tokio = { version = "1.0", features = ["full"] }
thirtyfour = { version = "0.36.1", features = ["reqwest"] }
url = "2.5.7"
reqwest = "0.12.24"
strum = { version = "0.27.2", features = ["derive"] }
